# machine_vision_learning

./: README.md
ZED/: .gitignore  CMakeLists.txt  README.md  main.cpp  test_thread.cpp
ZED/ZEDcamera/: CMakeLists.txt  ZEDcamera.cpp  ZEDcamera.hpp
bounding_box/: CMakeLists.txt  README.md  main.cpp
bounding_box/RGBD_driver/: CMakeLists.txt  rgbd_camera.cpp  rgbd_camera.h
bounding_box/protocol/: CMakeLists.txt  serialapp.cpp  serialapp.h  serialbase.cpp  serialbase.h
bounding_box/union_code/: CMakeLists.txt  union.cpp  union.h
bounding_box/yolo_bounding_box/: CMakeLists.txt  box.cpp  box.h  test.cpp
bounding_box/yolo_bounding_box/data/: arrow.cfg
bounding_box/yolo_bounding_box/yaml/: config.yaml
column_localization/: CMakeLists.txt
column_localization/cfg/: detect.yml  original_coordinate.txt
column_localization/hik-driver/: CMakeLists.txt  MVS.cpp  MVS.h
column_localization/include/: column_identify.h  slide_window.h
column_localization/livox_lidar/: livox.cc
column_localization/modules/module/: FindMVSCAM.cmake
column_localization/modules/module1/: FindMVSCAM.cmake
column_localization/protocol/: CMakeLists.txt  serialapp.cpp  serialapp.h  serialbase.cpp  serialbase.h
column_localization/src/: CMakeLists.txt  column_identify.cpp  slide_window.cpp
find_column_by_color/: CMakeLists.txt
find_column_by_color/src/: CMakeLists.txt  find.cpp
get_hsv_rgb/: CMakeLists.txt  main.cpp  readme.md
hik-driver/MVS/: CMakeLists.txt  MVS.cpp
hik-driver/MVS/Samples/Python/GrabImage/: GrabImage.py
livox-driver/: CMakeLists.txt  main.cc  readme.md
livox-driver/livox_lidar/: CMakeLists.txt  livox.h
livox-driver/sdk_livox/sdk/: install.sh  uninstall.sh
livox-driver/sdk_livox/sdk/livoxlidar/: LIVOXLIDARConfig.cmake
point_cloud_registration/: CMakeLists.txt
point_cloud_registration/include/: visualization.h
point_cloud_registration/pcd/: 48000-100.pcd  48000-101.pcd
point_cloud_registration/src/: CMakeLists.txt
tr/column_localization/script/: setup.sh
tr/column_localization/src/: main.cpp
useless_test/: CMakeLists.txt
useless_test/src/: 1.txt  CMakeLists.txt  hu.txt  main.cpp
visual_odometry/: CMakeLists.txt
visual_odometry/Kinectv3/: CMakeLists.txt  Kinectv3.cpp  Kinectv3.h
visual_odometry/include/: CMakeLists.txt  odometry.cpp  odometry.h
visual_odometry/src/: test.cpp
