cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 14)
# set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY /home/sdfs/code/visual_odometry/lib)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_FLAGS_RELEASE  "${CMAKE_C_FLAGS_RELEASE} -Wall -O3 -march=native")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -pg -march=native")
set(CMAKE_CXX_FLAGS_RELEASE   "${CMAKE_CXX_FLAGS_RELEASE} -Wall -O3 -march=native")
set(CMAKE_CXX_FLAGS_DEBUG    "${CMAKE_CXX_FLAGS_DEBUG} -Wall -pg -march=native")
project(main)
find_package(OpenCV REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(K4A REQUIRED)
find_package(PCL REQUIRED)
find_package(Boost REQUIRED COMPONENTS thread system)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${Eigen3_INCLUDE_DIRS})
include_directories(${K4A_INCLUDE_DIRS})
include_directories(${PCL_INCLUDE_DIRS})
include_directories(${Boost_INCLUDE_DIRS})
include_directories(./include)
include_directories(./Kinectv3)
# include_directories(/home/ethan/Documents/rc2021/visual_odometry/Kinectv3)
add_subdirectory(Kinectv3)
add_subdirectory(include)
add_executable(main ./src/test.cpp)
target_link_libraries(main ${OpenCV_LIBRARIES} 
         ${K4A_LIBRARIES} ${PCL_LIBRARIES} ${Boost_LIBRARIES} kinectv3
        /home/sdfs/code/visual_odometry/lib/libodometry.so)