project(rgbd_camera)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${test_union_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${test_union_SOURCE_DIR}/lib)
if (NOT OPENCV_FOUND)
    find_package(OpenCV  REQUIRED)
endif ()
if (NOT OPENNI2_FOUND)
    find_package(OpenNI2 REQUIRED)
endif ()
if (NOT Boost_FOUND )
    find_package(Boost  REQUIRED COMPONENTS thread)
endif ()
if (NOT PCL_FOUND)
    find_package(PCL  REQUIRED)
endif ()
if (NOT OPENMP_FOUND)
    find_package(OpenMP)
endif ()
if (OPENMP_FOUND)
    message(STATUS "Found openmp")
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
file(GLOB SRC_LIST *.cpp)
add_library(rgbd_camera SHARED ${SRC_LIST})
target_include_directories(rgbd_camera PUBLIC  ${OPENNI2_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ./)
target_link_libraries(rgbd_camera
        ${OpenNI2_LIBRARIES}
        ${OpenCV_LIBS}
        ${PCL_LIBRARIES}
        ${Boost_LIBRARIES})
target_sources(rgbd_camera PRIVATE ${SRC_LIST})
