# cmake_minimum_required(VERSION 3.12)
project(union)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS "-std=c++14")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${test_union_SOURCE_DIR}/lib)
set(RGBDdriver_INCLUDE_DIRS ${test_union_SOURCE_DIR}/RGBD_driver)
set(Kinectv3_INCLUDE_DIRS ${test_union_SOURCE_DIR}/Kinectv3)
set(Protocol_INCLUDE_DIRS ${test_union_SOURCE_DIR}/protocol)
if (NOT K4A_FOUND)
    find_package(K4A REQUIRED)
endif ()
if (NOT OPENCV_FOUND)
    find_package(OpenCV  REQUIRED)
endif ()
if (NOT Boost_FOUND)
    find_package(Boost  REQUIRED COMPONENTS system thread)
endif ()
if (NOT PCL_FOUND)
    find_package(PCL REQUIRED)
endif ()
include_directories(${test_union_SOURCE_DIR} ${Protocol_INCLUDE_DIRS} ${Kinectv3_INCLUDE_DIRS} ${RGBDdriver_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${K4A_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
add_library(union SHARED union.cpp union.h)
target_link_libraries(union rgbd_camera kinectv3 protocol ${OpenCV_LIBS} ${K4A_LIBS} ${PCL_LIBRARIES} ${Boost_LIBRARIES})