if (NOT K4A_FOUND)
    find_package(K4A REQUIRED)
endif ()
if (NOT OPENCV_FOUND)
    find_package(OpenCV  REQUIRED)
endif ()
if (NOT Boost_FOUND)
    find_package(Boost  REQUIRED COMPONENTS system thread)
endif ()
if (NOT PCL_FOUND)
    find_package(PCL REQUIRED)
endif ()
if (NOT OPENMP_FOUND)
    find_package(OpenMP)
endif ()
if (OPENMP_FOUND)
    message(STATUS "Found openmp")
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
file(GLOB SRC_LIST *.cpp)
add_library(kinectv3 SHARED "")
target_include_directories(kinectv3 PUBLIC ${K4A_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ./)
target_link_libraries(kinectv3
        ${K4A_LIBS}
        ${OpenCV_LIBS}
        ${Boost_LIBRARIES}
        ${PCL_LIBRARIES})
target_sources(kinectv3 PRIVATE ${SRC_LIST})
